2008-02-05  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/angle.C:
	* src/angle.h:
	* src/display_x11.h:
	* src/frame2d.C:
	* src/multi.h:
	* src/rgbcolor.C:
	* src/rgbcolor.h:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	* src/vector2d.C:
	* src/vector2d.h:
	* src/visobject.C:
	* src/visobject.h:
	- fixed coding style.

	* src/smonitor_dev.C:
	- slightly changed monitor protocol v3.

2008-02-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- implemented v3 protocol parser alpha version.

2007-11-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	- implemneted a resizable player type parameters.

2007-11-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/2dview.C:
	* src/smonitor_dev.C:
	* src/smonitor_dev.h:
	- changed a player number position.
	- changed a default player number font and its color.
	- changed a player's uniform number character to decimal number.
	- fixed initial player positions.
	- changed a default server host to 127.0.0.1

	* src/display_x11.h:
	* src/object2d.h:
	* src/smonitor_dev.C:
	- increase the minimum draw radius of goal posts to 2.

2007-10-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* smonitor_dev.C:
	- Changed NUM_TYPES to 14.

2007-08-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Updated a point version number. Official release 11.1.1

2007-08-25  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Fixed build problem on OSX.

2007-07-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* src/smonitor_dev.C:
	Changed the default c_font_r value to dark blue (0,0,139).

2007-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* configure.ac:
	Updated a minor version. Official Relaase 11.1.0.

2007-05-24  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* NEWS:
	* configure.ac:
	Updated a point version number. Release Candidate 11.0.4.
